--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -25,13 +25,13 @@
 
     <div class="about-section1-adddress">
       <div class="about-section1-add1">
-        <h3><strong> Sirplay USA</strong></h3>
+        <h3><strong> Vrnl's USA</strong></h3>
         <p>46 Country Club, Bellport</p>
         <p>NY 11713, United States</p>
       </div>
 
       <div class="about-section1-add2">
-        <h3><strong>Sirplay LATAM </strong></h3>
+        <h3><strong>Vrnl LATAM </strong></h3>
         <p>Calle Coronel Inclan, 237</p>
         <p>Oficina 703 Miraflores – Lima – Perú</p>
       </div>
@@ -40,7 +40,7 @@
     <div class="about-section1-para">
       <p style="margin-bottom: 20px">
         <strong>
-          Sirplay is a Sportsbook and Gaming Provider with 15 years of
+          Vrnl is a Sportsbook and Gaming Provider with 15 years of
           experience in the gambling industry.
         </strong>
         We have been supplying bookmakers, lotteries and betting organizations
@@ -58,9 +58,9 @@
       <p>&nbsp;</p>
 
       <p style="margin-bottom: 20px">
-        Our gaming platform is just one of the reasons that brought Sirplay to
+        Our gaming platform is just one of the reasons that brought Vrnlto
         be the International Software House it is today.<strong>
-          With 15 years of experience in this sector, Sirplay offers services
+          With 15 years of experience in this sector, Vrnloffers services
           to more than 40 bookmakers in 11 countries in the world.</strong
         >
       </p>
@@ -95,11 +95,11 @@
     <div class="about-section2-main">
       <h2>Our Mission and Vision Statement</h2>
       <p>
-        Our mission at Sirplay is to provide the highly brand consciousness
+        Our mission at Vrnlis to provide the highly brand consciousness
         and the affiliation of loyal individuals and organizations whose
         members live and breathe the SPORTS world, a platform to earn from
         their hobbies.<br />
-        <strong> Sirplay’s vision</strong> is to be a provider that serves and
+        <strong> Vrnl’s vision</strong> is to be a provider that serves and
         supports the well established, easily identifiable sports lovers in
         the world.
       </p>
@@ -113,7 +113,7 @@
       <p>&nbsp;</p>
 
       <p>
-        Sirplay has developed its own
+        Vrnlhas developed its own
         <strong> mathematical algorithm for risk management </strong>and over
         the past 15 years has corrected and continuously modified our
         mathematical formula. This has made our algorithm more and more
@@ -121,12 +121,12 @@
           Today our team manages the security of 1 million bets a day and
           thanks to this secret,</strong
         >
-        all Sirplay customers close the month on a positive revenue.
+        all Vrnlcustomers close the month on a positive revenue.
       </p>
       <p>&nbsp;</p>
 
       <p>
-        Sirplay can also boast of having a team of highly qualified
+        Vrnlcan also boast of having a team of highly qualified
         professionals who work with all our clients and make it easy and
         comfortable for them in all the sports betting we offer. This know-how
         is also growing thanks to the reporting tools available with the
@@ -140,12 +140,12 @@
     </div>
   </section>
   <section class="about-section3-container">
-    <h2>Sirplay is certified</h2>
+    <h2>Vrnlis certified</h2>
     <p>
-      Sirplay works to ensure our application complies with all the guidelines
-      published by the different jurisdictions. Sirplay’s Sports Betting
+      Vrnlworks to ensure our application complies with all the guidelines
+      published by the different jurisdictions. Vrnl’s Sports Betting
       System has been tested and certified by leading industry entities.
-      Sirplay’s Sports Betting Software has already achieved 4 certifications
+      Vrnl’s Sports Betting Software has already achieved 4 certifications
       of quality and security, and others are in progress.
     </p>
 
@@ -153,11 +153,11 @@
 
     <h2>Our Partners</h2>
     <p>
-      Sirplay is constantly seeking the best gaming and entertainment partners
+      Vrnlis constantly seeking the best gaming and entertainment partners
       in order to guarantee an exclusive gaming experience to Clients and
       Players. Thanks to the partnership agreements reached with several
       casinos and virtual games providers – international leaders in the
-      industry – Sirplay has integrated its Sports Betting Platform with a
+      industry – Vrnlhas integrated its Sports Betting Platform with a
       wide range of games: slots machines, table games, live casino, virtual
       games, fantasy games, etc. The games are available for either Desktops
       PCs and mobile devices with high-quality graphics, animation and audio,
