--- a/src/app/bitcoin/bitcoin.component.html
+++ b/src/app/bitcoin/bitcoin.component.html
@@ -5,7 +5,7 @@
              <h1 class="home_header_h1">Bitcoin
                  <span class="typing-text"></span></h1>
            </section>
-           <p class="param">Sirplay launched its first Bitcoin sportsbook software fully converted in the cryptocurrency in 2017.</p>
+           <p class="param">Vrnl launched its first Bitcoin sportsbook software fully converted in the cryptocurrency in 2017.</p>
  
     </div>
  </section>
@@ -68,7 +68,7 @@
 
     <div class="how-head">
         <h2>How to use bitcoin in your sports betting software</h2>
-        <p>Sirplay offers <b>two ways to switch your betting platform</b> in a Bitcoin betting solution: use it as a
+        <p>Vrnl offers <b>two ways to switch your betting platform</b> in a Bitcoin betting solution: use it as a
             payment method option or as your currency. The difference seems slight but it’s massive.</p>
     </div>
 
@@ -119,7 +119,7 @@
             <p>The Casino platform included in our sportsbook is simple as our software is easy to manage whether
                 you are a novice or seasoned pro. <br>
 
-                <br> At Sirplay, we will provide you with all the advice you need to start <a href="">crypto
+                <br> At Vrnl , we will provide you with all the advice you need to start <a href="">crypto
                     casino</a>.
             </p>
         </div>
@@ -133,7 +133,7 @@
     <div class="contact_row">
       <div class="contact_col">
     <h3 class="contact_header">Contact US</h3>
-    <p class="contact_para">Connect with a Sirplay expert for a detailed discussion about how our services might give benefits to your Betting business and create your own strategy.</p>
+    <p class="contact_para">Connect with a Vrnl expert for a detailed discussion about how our services might give benefits to your Betting business and create your own strategy.</p>
     <div class="contact_social">
       <div class="contact_details">
         <div class="row_col">
