--- a/src/app/cashout/cashout.component.html
+++ b/src/app/cashout/cashout.component.html
@@ -72,7 +72,7 @@
         </p>
 
         <p>
-          The presence of the cashout function is a peculiarity of Sirplay’s
+          The presence of the cashout function is a peculiarity of Vrnl’s
           platform and is not present on the sites of classic bookmakers. For
           this reason, it is of fundamental importance to know how to seize
           the moment, by clicking on the button before the odds change, or to
@@ -122,7 +122,7 @@
         <h2>Live Betting and Pre-match Cashout</h2>
         <p>
           We realized two types of cashout, one is for the prematch and the
-          other one for the live betting and both of them use Sirplay
+          other one for the live betting and both of them use Vrnl
           proprietary mathematics which guarantee utility and security.
         </p>
 
@@ -146,7 +146,7 @@
           The Live betting (In-play) Cash out option guarantees the bookmaker
           a fixed percentage of profit on the bets placed. If your players
           haven’t requested it yet, be assured that they will do so shortly.
-          The calculation carried out by the system developed by Sirplay is
+          The calculation carried out by the system developed by Vrnl is
           automatic and takes place in real time based on the variation of
           live odds.
         </p>
