--- a/src/app/certificate/certificate.component.html
+++ b/src/app/certificate/certificate.component.html
@@ -12,9 +12,9 @@
 
 <section class="certificate-container2">
     <div class="certificate-section2">
-        <p style="margin-bottom: 8px;">As a responsible supplier to the regulated gaming industry,<strong>Sirplay works to ensure our application complies with all the guidelines published by the jurisdiction.</strong>  Sirplay’s Sports Betting System has been tested and <strong> certified by leading industry bodies.</strong></p>
+        <p style="margin-bottom: 8px;">As a responsible supplier to the regulated gaming industry,<strong>Vrnl works to ensure our application complies with all the guidelines published by the jurisdiction.</strong>  Vrnl Sports Betting System has been tested and <strong> certified by leading industry bodies.</strong></p>
 
-        <p>Want to know more about Sirplay’s certified Sports Betting System?</p>
+        <p>Want to know more about Vrnl’s certified Sports Betting System?</p>
         <p>&nbsp;</p>
     </div>
 
@@ -30,11 +30,11 @@
 
         <div class="certificate-section2-paras">
             <p><strong> GLI-19</strong></p>
-            <p>The<strong>Sirplay’s Betting Software is tested and certified</strong>  by the Gaming Laboratories International. Sirplay works to ensure our application complies with all the guidelines published by the jurisdictions. (Ref: SY-120-SPY-14-01/MO-120-SPY-14-01)</p>
+            <p>The<strong>Vrnl’s Betting Software is tested and certified</strong>  by the Gaming Laboratories International. Vrnl works to ensure our application complies with all the guidelines published by the jurisdictions. (Ref: SY-120-SPY-14-01/MO-120-SPY-14-01)</p>
 
             <p><strong> GLI-Colombia</strong></p>
 
-            <p>GLI certified Sirplay as<strong> provider of sportsbook wagering platform</strong> for all operators matching law requirements in the<strong> Colombian jurisdiction.</strong> (Ref: MO-295-SPY-16-01/SY-295-SPY-16-01)</p>
+            <p>GLI certified Vrnl as<strong> provider of sportsbook wagering platform</strong> for all operators matching law requirements in the<strong> Colombian jurisdiction.</strong> (Ref: MO-295-SPY-16-01/SY-295-SPY-16-01)</p>
             <p>&nbsp;</p>
         </div>
 
@@ -53,7 +53,7 @@
 
         <div class="certificate-section2-paras">
             <p><strong> ISO/IEC 27001:2013</strong></p>
-            <p>Sirplay implements management system that conforms to the requirements of the standard “ISO/IEC 27001:2013” for:</p>
+            <p>Vrnl implements management system that conforms to the requirements of the standard “ISO/IEC 27001:2013” for:</p>
 
            
 
