--- a/src/app/contact-com/contact-com.component.html
+++ b/src/app/contact-com/contact-com.component.html
@@ -3,7 +3,7 @@
     <div class="contact_col">
       <h3 class="contact_header">Contact US</h3>
       <p class="contact_para">
-        Connect with a Sirplay expert for a detailed discussion about how our
+        Connect with a Vrnl expert for a detailed discussion about how our
         services might give benefits to your Betting business and create your
         own strategy.
       </p>
