--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -25,7 +25,7 @@
 
 
     <div class="contact-section1-para">
-    <p style="margin-bottom:20px ;"><strong>  Sirplay is a Sportsbook and Gaming Provider with 15 years of experience in the gambling industry. </strong> We have been supplying bookmakers, lotteries and betting organizations in regulated markets since 2005.
+    <p style="margin-bottom:20px ;"><strong>  Vrnl is a Sportsbook and Gaming Provider with 15 years of experience in the gambling industry. </strong> We have been supplying bookmakers, lotteries and betting organizations in regulated markets since 2005.
     </p>
     <p>&nbsp;</p>
 
