--- a/src/app/crypto/crypto.component.html
+++ b/src/app/crypto/crypto.component.html
@@ -5,7 +5,7 @@
              <h1 class="home_header_h1">Crypto
                 <span class="typing-text"></span></h1>
            </section>
-           <p class="param">Crypto Casino software and iGaming platform, In 2021 we used the first web3 wallets. Sirplay launched its first Bitcoin sportsbook software fully converted in the cryptocurrency in 2017.</p>
+           <p class="param">Crypto Casino software and iGaming platform, In 2021 we used the first web3 wallets. Vrnl launched its first Bitcoin sportsbook software fully converted in the cryptocurrency in 2017.</p>
  
     </div>
  </section>
@@ -19,7 +19,7 @@
   <p >We develop Crypto casino software easily to the web3 our games catalog consists of over 30,000 titles all usable through the main online channels and are also suitable for the metaverse our ecosystem is a conglomerate of Businesses with expertise in online Casino, NFT and Decentralized crypto wallets or Dapps.</p>
 
 
-  <p >The Casino platform is simple as our software is easy to manage whether you are a novice or seasoned pro. At Sirplay, we will provide you with all the advice you need to start online casino.</p>
+  <p >The Casino platform is simple as our software is easy to manage whether you are a novice or seasoned pro. At Vrnl, we will provide you with all the advice you need to start online casino.</p>
         </div>
 
 
@@ -271,7 +271,7 @@
 
     <div class="crypto-section9-col2">
         <h1>Exceptional performance</h1>
-        <p>Sirplay’s platform is optimized for exceptional performance and high stability. We use the latest technology, which performs up to 2x faster than conventional casino platform around.
+        <p>Vrnl’s platform is optimized for exceptional performance and high stability. We use the latest technology, which performs up to 2x faster than conventional casino platform around.
           Our long experience and our intuition gave birth to the fastest and most powerful application existing nowadays.</p>
 
 
