--- a/src/app/decentralized/decentralized.component.html
+++ b/src/app/decentralized/decentralized.component.html
@@ -5,7 +5,7 @@
              <h1 class="home_header_h1">Decentralized
                  <span class="typing-text"></span></h1>
            </section>
-           <p class="param">Full Web3 sportsbook and iGaming platform, In 2021 we used the first web3 wallets. Sirplay launched its first Bitcoin sportsbook software fully converted in the cryptocurrency in 2017.</p>
+           <p class="param">Full Web3 sportsbook and iGaming platform, In 2021 we used the first web3 wallets. Vrnl launched its first Bitcoin sportsbook software fully converted in the cryptocurrency in 2017.</p>
  
     </div>
  </section>
@@ -55,7 +55,7 @@
     </div>
     <div class="features_col_1">
      <h1 class="feature_header"><span>Online sportsbook software</span> Main features</h1> 
-     <p class="feature_para">Betting and online Casino management is now transforming with the help of Sirplay:</p>  
+     <p class="feature_para">Betting and online Casino management is now transforming with the help of Vrnl:</p>  
      <ul class="feature_list">
         <li>All popular worldwide sports, all leagues, and all betting markets
         </li>
