--- a/src/app/footers2/footers2.component.html
+++ b/src/app/footers2/footers2.component.html
@@ -59,8 +59,8 @@
         
         
         </div> 
-        <p class="footer_para_1">Sirplay's logo and graphic material is the company's intellectual property and may not be copied, reproduced, distributed or displayed without written consent of Sirplay.
+        <p class="footer_para_1">Vrnl's logo and graphic material is the company's intellectual property and may not be copied, reproduced, distributed or displayed without written consent of Vrnl.
         
-            Copyright © 2020 Sirplay ltd. All rights reserved.</p>
+            Copyright © 2020 Vrnl ltd. All rights reserved.</p>
         </div>  
         </section>
