--- a/src/app/header3/header3.component.html
+++ b/src/app/header3/header3.component.html
@@ -8,7 +8,7 @@
     <nav class="navbar">
   
       <ul class="navbar-list">
-        <li><a class="navbar-link" routerLink="/" >Sirplay</a></li>
+        <li><a class="navbar-link" routerLink="/" >Vrnl</a></li>
         <li><a  class="navbar-link" href="">Sports betting software <i class="fa-solid fa-angle-down"></i></a>
           <ul id="submenu" >
               <!-- <li><a routerLink="/sports-betting-software/retail-solutions">Retail solution <i class="fa-solid fa-angle-down"></i></a>
@@ -72,7 +72,7 @@
       
           <ul  class="res_data">
               <div class="use_list" id="panel">
-              <li><a href="/index.html ">Sirplay</a></li>
+              <li><a href="/index.html ">Vrnl</a></li>
               <li (click)="animation()" >Sports betting software</li>
               <li (click)="animation12()">White label casino</li>
               <li (click)="animated()">Web3</li>
