--- a/src/app/live-casino/live-casino.component.html
+++ b/src/app/live-casino/live-casino.component.html
@@ -10,7 +10,7 @@
             <p class="index2-col-para1">Our <strong> live Casino platform </strong> allow you to activate the best <strong> live
                     providers</strong> with <strong>  exceptional quality and math.</strong> </p>
 
-            <p class="index2-col-para2">The Sirplay's Live Casino solution offers to you the <strong> service available today:</strong></p>
+            <p class="index2-col-para2">The Vrnl's Live Casino solution offers to you the <strong> service available today:</strong></p>
             <ul>
                 <li>Full History Reporting Tools</li>
                 <li>Payment Methods For Cash, Credit card, Vouchers and many others</li>
