--- a/src/app/main-sec/main-sec.component.html
+++ b/src/app/main-sec/main-sec.component.html
@@ -241,7 +241,7 @@
           Integrated with decentralized gaming token
         </h1>
         <p class="crypto_para">
-          Sirplay launched its first Bitcoin sportsbook software in 2017 at
+          Vrnl launched its first Bitcoin sportsbook software in 2017 at
           London ICE. We provide White-label Bitcoin sportsbook software for
           bookmakers and it is possible to customize and rebrand the betting
           platform based on one’s needs and requirements.
@@ -355,7 +355,7 @@
         on the different sports available worldwide.
       </p>
       <p class="faq_para_1">
-        Sirplay sportsbook software offers 150,000 pre-match events with more
+        Vrnl sportsbook software offers 150,000 pre-match events with more
         than 80 categories, and up to 70,000 live events per month. Your users
         will appreciate the huge variety of odds and mixed bets.
       </p>
@@ -370,7 +370,7 @@
       <h3 class="faq_header_2">What is a turnkey casino?</h3>
       <p class="faq_para_1">
         A turnkey casino is a solution ready to go live and your players will
-        have the chance to play as in real casino. With Sirplay turnkey casino
+        have the chance to play as in real casino. With Vrnl turnkey casino
         solution, your players will never get bored with more than 150
         providers and different games such as live casino, lottery, virtual
         games and many other.
@@ -382,11 +382,11 @@
         operators who want to work with online casinos.
       </p>
       <p class="faq_para_2">
-        Thanks to its experience, Sirplay casino white label, will offer
+        Thanks to its experience, Vrnl casino white label, will offer
         certified and secure casino games.
       </p>
       <p class="faq_para_1">
-        Sirplay Casino white label allows you to customize the casino based on
+        Vrnl Casino white label allows you to customize the casino based on
         your favourite language and currency.
       </p>
 
@@ -394,7 +394,7 @@
       <p class="faq_para">
         A white label sportsbook is a sports betting platform that can be
         customised and rebranded by the Operator, based on the target markets
-        chosen. Sirplay counts with a rich and complete betting offer,
+        chosen. Vrnl counts with a rich and complete betting offer,
         including over 150,000 pre-match events with more than 80 categories,
         thousands of live events and many must have features like the cashout,
         rebet, shock absorber and more.
@@ -402,10 +402,10 @@
 
       <h3 class="faq_header_2">What is a white label betting site?</h3>
       <p class="faq_para">
-        A white label betting site is a fully customised platform. Sirplay’s
+        A white label betting site is a fully customised platform. Vrnl’s
         white label betting site provides certified games, bonus system,
         payment gateways. The User Interface content, language and currency
-        are based on your choice, indeed Sirplay makes available different
+        are based on your choice, indeed Vrnl makes available different
         graphic templates, features and tools.
       </p>
 
@@ -541,23 +541,23 @@
 
     <div class="sirplay_sec">
       <div class="sirplay_certificate">
-        <h1 class="sirplay_head">Sirplay is certified</h1>
+        <h1 class="sirplay_head">Vrnl is certified</h1>
         <p class="sirplay_para">
-          Sirplay works to ensure our application complies with all the
-          guidelines published by the different jurisdictions. Sirplay’s
+          Vrnl works to ensure our application complies with all the
+          guidelines published by the different jurisdictions. Vrnl’s
           Sports Betting System has been tested and certified by leading
-          industry entities. Sirplay’s Sports Betting Software has already
+          industry entities. Vrnl’s Sports Betting Software has already
           achieved 4 certifications of quality and security, and others are in
           progress.
         </p>
 
         <h1 class="sirplay_head">Our Partners</h1>
         <p class="sirplay_para">
-          Sirplay is constantly seeking the best gaming and entertainment
+          Vrnl is constantly seeking the best gaming and entertainment
           partners in order to guarantee an exclusive gaming experience to
           Clients and Players. Thanks to the partnership agreements reached
           with several casinos and virtual games providers – international
-          leaders in the industry – Sirplay has integrated its Sports Betting
+          leaders in the industry – Vrnl has integrated its Sports Betting
           Platform with a wide range of games: slots machines, table games,
           live casino, virtual games, fantasy games, etc.
         </p>
