--- a/src/app/online-casino-software/online-casino-software.component.html
+++ b/src/app/online-casino-software/online-casino-software.component.html
@@ -322,8 +322,8 @@
           A casino software white label solution is the perfect solution for
           the operators who want to work with online casinos. Thanks to its
           experience,<br />
-          Sirplay casino white label, will offer certified and secure casino
-          games. Sirplay Casino white label allows you to customize the casino
+          Vrnl casino white label, will offer certified and secure casino
+          games. Vrnl Casino white label allows you to customize the casino
           based on<br />
           your favourite language and currency.<br /><br /><br />
         </p>
