--- a/src/app/online-sportsbook/online-sportsbook.component.html
+++ b/src/app/online-sportsbook/online-sportsbook.component.html
@@ -53,7 +53,7 @@
 </div>
 <div class="features_col_1">
  <h1 class="feature_header"><span>Online sportsbook software</span> Main features</h1> 
- <p class="feature_para">Betting and online Casino management is now transforming with the help of Sirplay:</p>  
+ <p class="feature_para">Betting and online Casino management is now transforming with the help of Vrnl:</p>  
  <ul class="feature_list">
     <li>All popular worldwide sports, all leagues, and all betting markets
     </li>
@@ -169,10 +169,10 @@
       </section>
       <section class="data_treading_sec">
     <h1 class="treading_head">Data & Trading</h1>
-    <p class="theading_para">We offer trading and risk management services, odds management consultancy and winnings coverage. Sirplay started its business as risk manager 15 years ago,  since then we have been continuously investing in our mathematical algorithm to guarantee zero losses! We are so confident in our system that we pay you in case of loss.</p>  
+    <p class="theading_para">We offer trading and risk management services, odds management consultancy and winnings coverage. Vrnl started its business as risk manager 15 years ago,  since then we have been continuously investing in our mathematical algorithm to guarantee zero losses! We are so confident in our system that we pay you in case of loss.</p>  
 
     <h1 class="treading_head">Media & Marketing Agency</h1>
-    <p class="theading_para">Each client’s strategy is different based on audience, budget, brand, and goals. Sirplay providers full-service marketing, working alongside with your marketing team, as an extension, or becoming your marketing agency and creating a marketing strategy together.</p>
+    <p class="theading_para">Each client’s strategy is different based on audience, budget, brand, and goals. Vrnl providers full-service marketing, working alongside with your marketing team, as an extension, or becoming your marketing agency and creating a marketing strategy together.</p>
 <h1 class="treading_head">Affiliate Network</h1>
 <p class="theading_para">The acquisition of new players is a key point and we have simplified the affiliation management proposing our bonus engine, it allows you to be competitive in all markets.</p>
 <h1 class="treading_head">
