--- a/src/app/retail/retail.component.html
+++ b/src/app/retail/retail.component.html
@@ -11,7 +11,7 @@
           optimise your betting shop operations with full control of all your
           valued assets, including betting terminals, staff, and other
           facility management equipment. With purpose driven betting shops
-          solutions like staff enablement and cashier management, Sirplay
+          solutions like staff enablement and cashier management, Vrnl
           helps deliver a performance advantage that strengthens the front
           lines of your retail betting shop operations.
         </p>
