--- a/src/app/terminal/terminal.component.html
+++ b/src/app/terminal/terminal.component.html
@@ -30,7 +30,7 @@
       </li>
       <br />
       <li>
-        When we say – Sirplay has the best sports betting solutions– we refer
+        When we say – Vrnl has the best sports betting solutions– we refer
         to the betting shops as well.
       </li>
       <br />
