--- a/src/app/wagering/wagering.component.html
+++ b/src/app/wagering/wagering.component.html
@@ -16,8 +16,8 @@
         <div class="wagering_col">
           <h2 class="ware_header">Wagering solutions</h2>
           <p class="ware_param">
-            Sirplay has the <strong>wagering solutions</strong> for your
-            bookmaker business. The number of punters who can wager in Sirplay
+            Vrnl has the <strong>wagering solutions</strong> for your
+            bookmaker business. The number of punters who can wager in Vrnl
             sports betting software is endless. The bookmakers are able to
             offer great odds and betting types to the bettors.
             <strong> A wide range of sports events</strong> of all over the
@@ -60,7 +60,7 @@
             <li>Android – iOS casino mobile application</li>
             <li>24/7 – 365 Support and remote maintenance</li>
             <li>
-              Sirplay is certified as provider of sportsbook wagering platform
+              Vrnl is certified as provider of sportsbook wagering platform
               for all operators matching law requirements.
             </li>
           </ol>
