--- a/src/app/web3casino/web3casino.component.html
+++ b/src/app/web3casino/web3casino.component.html
@@ -7,7 +7,7 @@
         </h1>
       </section>
       <p class="param">
-        Full Web3 Casino and iGaming platform, In 2021 we used the first web3 wallets. Sirplay launched its first Bitcoin sportsbook software fully converted in the cryptocurrency in 2017
+        Full Web3 Casino and iGaming platform, In 2021 we used the first web3 wallets. Vrnl launched its first Bitcoin sportsbook software fully converted in the cryptocurrency in 2017
       </p>
     </div>
   </section>
@@ -245,7 +245,7 @@
         <p>A turnkey casino software is a solution ready to go live and your players will have the chance to play as in real casino. Your players will never<br> get bored with more than 150 providers and different games such as live casino, lottery, virtual games and many other.<br><br><br></p>
     
         <h3>What is a casino white label casino software?</h3>
-        <p>A casino software white label solution is the perfect solution for the operators who want to work with online casinos.  Thanks to its experience,<br> Sirplay casino white label, will offer certified and secure casino games. Sirplay Casino white label allows you to customize the casino based on<br> your favourite language and currency.<br><br><br></p>
+        <p>A casino software white label solution is the perfect solution for the operators who want to work with online casinos.  Thanks to its experience,<br> Vrnl casino white label, will offer certified and secure casino games. Vrnl Casino white label allows you to customize the casino based on<br> your favourite language and currency.<br><br><br></p>
     
         <h3>What do we offer as casino software provider?</h3>
         <ul class="user_list_w">
