--- a/src/app/whitecasino/whitecasino.component.html
+++ b/src/app/whitecasino/whitecasino.component.html
@@ -8,7 +8,7 @@
     <p class="white_c_param">We offer <strong> White Label Casino </strong>with Trading Software & Tools.
     
     </p>
-    <p class="white_c_param_2">The online casino platform is simple as our software is easy to manage whether you are a novice or seasoned pro. At Sirplay, we will provide you with all the advice you need to start online casino.</p>
+    <p class="white_c_param_2">The online casino platform is simple as our software is easy to manage whether you are a novice or seasoned pro. At Vrnl, we will provide you with all the advice you need to start online casino.</p>
     <p></p>
     <br>
     <p class="white_c_param">Before starting, see it in action:</p>
@@ -85,7 +85,7 @@
     </ul>
     <p>Wait, there’s more
     </p>
-    <p class="whites_sol_p2"> <strong>Sirplay’s platform is optimized for exceptional performance</strong>  and high stability. We use the latest technology, which performs up to 2x faster than conventional casino platform around.
+    <p class="whites_sol_p2"> <strong>Vrnl’s platform is optimized for exceptional performance</strong>  and high stability. We use the latest technology, which performs up to 2x faster than conventional casino platform around.
         Our long experience and our intuition gave birth to the fastest and most powerful application existing nowadays.</p>
         </div>
         <div class="white_csol_col_1">
