--- a/src/app/main-sec/main-sec.component.css
+++ b/src/app/main-sec/main-sec.component.css
@@ -221,7 +221,7 @@ font-weight: 600;
     width: 93%;
 }
 .platform_header {
-    font-size: 35px;
+    font-size: 33px;
     width: 94%;
   }
 
@@ -543,9 +543,13 @@ padding-top: 80PX;
         width: 99%;
     }
     .web3_img {
-        margin-left: 54px;
+        margin-left: 16px;
+        width:253px;
+        height: 550px;
+        
+}
     }
-  }
+  
 
 /*=========== <  WEB3 section end >=========== */
 
