--- a/src/app/web3sportbook/web3sportbook.component.html
+++ b/src/app/web3sportbook/web3sportbook.component.html
@@ -6,7 +6,7 @@
                 <span class="typing-text"></span>
             </h1>
         </section>
-        <p class="param">Full Web3 sportsbook and iGaming platform, In 2021 we used the first web3 wallets. Sirplay
+        <p class="param">Full Web3 sportsbook and iGaming platform, In 2021 we used the first web3 wallets. Vrnl
             launched its first Bitcoin sportsbook software fully converted in the cryptocurrency in 2017.</p>
 
     </div>
@@ -52,7 +52,7 @@
         </div>
         <div class="features_col_1">
             <h1 class="feature_header"><span>Web3 Sportsbook</span> Main features</h1>
-            <p class="feature_para">Betting and online Casino management is now transforming with the help of Sirplay:
+            <p class="feature_para">Betting and online Casino management is now transforming with the help of Vrnl:
             </p>
             <ul class="feature_list">
                 <li>All popular worldwide sports, all leagues, and all betting markets
