--- a/src/app/whitelabel/whitelabel.component.html
+++ b/src/app/whitelabel/whitelabel.component.html
@@ -13,7 +13,7 @@
     <div class="label-bet">
       <div class="label-para">
         <p>
-          Sirplay’s <b> white label sportsbook solution</b> is a fully managed
+          Vrnl’s <b> white label sportsbook solution</b> is a fully managed
           certified sportsbook. <br />
 
           <br />
@@ -72,13 +72,13 @@
         <h1>Customizations</h1>
         <h2>Be unique</h2>
         <p>
-          <b>Sirplay’s consultants will collect your requirements</b> and show
+          <b>Vrnl’s consultants will collect your requirements</b> and show
           you several templates and recent development works: all the
           platforms are multi language and multi currency, the UI will be
           customized around your needs. <br />
 
           <br />
-          Take your first steps in Sirplay’s world.
+          Take your first steps in Vrnl’s world.
         </p>
         <div
           class="niva-separator1"
@@ -138,7 +138,7 @@
         <h1>Marketing tools</h1>
         <h2>Bonus and Promotions</h2>
         <p>
-          <b>The acquisition of new players is a key point</b>, Sirplay
+          <b>The acquisition of new players is a key point</b>, Vrnl
           provides various tools depending on the goal to be achieved. We have
           simplified the management of affiliations and our bonus engine
           allows you to be competitive in the market.
